--- a/Telefonia/views/alarmas.html
+++ b/Telefonia/views/alarmas.html
@@ -1,7 +1,7 @@
 <div class="alarm-content">
     <h1>Servicio de Alarmas</h1>
     <div class="alarm-card">
-        <a href="/"><img width="600" src="../../public/images/alarma.jpg" alt=""></a>
+        <a href="/"><img width="600" src="/images/alarma.jpg" alt=""></a>
         <div class="alarm-right-panel">
             <ul>
                 <li>Graba las 24h</li>
