--- a/Telefonia/views/ayuda.html
+++ b/Telefonia/views/ayuda.html
@@ -2,7 +2,7 @@
     <h1>Ayuda</h1>
     <div class="ayuda-container">
         <div class="ayuda">
-            <img class="ayuda-img" src="./images/slider1.png" >
+            <img class="ayuda-img" src="/images/slider1.png" >
             <div class="ayuda-info-cont">
                 <h2>Contacto</h2>
                 <p>Póngase en contacto con nosotros si no encuentra lo que busca o tiene alguna duda</p>
@@ -10,7 +10,7 @@
             </div>
         </div>
         <div class="ayuda">
-            <img class="ayuda-img" src="./images/slider2.png" >
+            <img class="ayuda-img" src="/images/slider2.png" >
             <div class="ayuda-info-cont">
                 <h2>Preguntas más frecuentes</h2>
                 <p>Consulte las preguntas más frecuentes de nuestros usuarios.</p>
@@ -18,7 +18,7 @@
             </div>
         </div>
         <div class="ayuda">
-            <img class="ayuda-img" src="./images/slider1.png" >
+            <img class="ayuda-img" src="/images/slider1.png" >
             <div class="ayuda-info-cont">
                 <h2>Asistencia y soporte técnico</h2>
                 <p>Disponemos de un personale técnico disponible las 24h del día para ayudarle a solucionar culquier problema con sus servicios contratados.</p>
