--- a/Telefonia/views/contacto.html
+++ b/Telefonia/views/contacto.html
@@ -1,8 +1,8 @@
-<div class="content">
+<div class="contacto-content">
     <h1>Contacto</h1>
     <div class="contacto-container">
         <div class="contacto">
-            <img class="contacto-img" src="./images/slider1.png" >
+            <img class="contacto-img" src="/images/slider1.png" >
             <div class="contacto-info-cont">
                 <h2>Garantía y soporte técnico</h2>
                 <div>
@@ -13,7 +13,7 @@
             </div>
         </div>
         <div class="contacto">
-            <img class="contacto-img" src="./images/slider2.png" >
+            <img class="contacto-img" src="/images/slider2.png" >
             <div class="contacto-info-cont">
                 <h2>Llámanos para más información</h2>
                 <div>
@@ -24,7 +24,7 @@
             </div>
         </div>
         <div class="contacto">
-            <img class="contacto-img" src="./images/slider1.png" >
+            <img class="contacto-img" src="/images/slider1.png" >
             <div class="contacto-info-cont">
                 <h2>Escríbenos para cualquier consulta</h2>
                 <div>
