--- a/Telefonia/views/empresas.html
+++ b/Telefonia/views/empresas.html
@@ -2,17 +2,17 @@
     <h1>Empresas</h1>
     <div class="empresas-banner">
         <h2>Casos de Éxito</h2>
-        <img class="empresa-img" src="./images/slider1.png" >
-        <img class="empresa-img" src="./images/slider1.png" >
-        <img class="empresa-img" src="./images/slider1.png" >
-        <img class="empresa-img" src="./images/slider1.png" >
-        <img class="empresa-img" src="./images/slider1.png" >
+        <img class="empresa-img" src="images/slider1.png" >
+        <img class="empresa-img" src="images/slider1.png" >
+        <img class="empresa-img" src="images/slider1.png" >
+        <img class="empresa-img" src="images/slider1.png" >
+        <img class="empresa-img" src="images/slider1.png" >
     </div>
 
     <h2>Servicios para grandes empresas</h2>
-    <div class="grandes-empresas-container">
+    <div class="empresas-container">
         <div class="empresa">
-            <img class="empresa-img" src="./images/slider1.png" >
+            <img class="empresa-img" src="images/slider1.png" >
             <div class="empresa-info-cont">
                 <h3>Housing</h3>
                 <div>
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div class="empresa">
-            <img class="empresa-img" src="./images/slider2.png" >
+            <img class="empresa-img" src="images/slider2.png" >
             <div class="empresa-info-cont">
                 <h3>Copia de seguridad en la nube</h3>
                 <div>
