--- a/Telefonia/views/grandes-empresas.html
+++ b/Telefonia/views/grandes-empresas.html
@@ -1,16 +1,16 @@
-<div class="content">
+<div class="grandes-empresas-content">
     <h1>Grandes Empresas</h1>
     <div class="empresas-banner">
         <h2>Casos de Éxito</h2>
-        <img class="empresa-img" src="./images/slider1.png" >
-        <img class="empresa-img" src="./images/slider1.png" >
-        <img class="empresa-img" src="./images/slider1.png" >
-        <img class="empresa-img" src="./images/slider1.png" >
-        <img class="empresa-img" src="./images/slider1.png" >
+        <img class="empresa-img" src="images/slider1.png" >
+        <img class="empresa-img" src="images/slider1.png" >
+        <img class="empresa-img" src="images/slider1.png" >
+        <img class="empresa-img" src="images/slider1.png" >
+        <img class="empresa-img" src="images/slider1.png" >
     </div>
     <div class="contacto-empresa-container">
         <div class="contacto-empresa">
-            <img  src="./images/header/linea-internet.png" alt="">
+            <img  src="images/header/linea-internet.png" alt="">
             <div class="info-contact-empresas">
                 <h3>¿Estás interesado? Contacta con el servicio de ventas.</h3>
                 <p> Contacta con nuestro servicio de ventas y haremos un <strong>estudio personalizados</strong> a tu empresa. De esta forma podremos darte una <strong>oferta única</strong> que se ajuste perfectamente a sus necesidades. Si lo prefieres, puedes llamar al <strong>900 123 123</strong></p>
@@ -21,7 +21,7 @@
     <h2>Servicios para grandes empresas</h2>
     <div class="grandes-empresas-container">
         <div class="empresa">
-            <img class="empresa-img" src="./images/slider1.png" >
+            <img class="empresa-img" src="images/slider1.png" >
             <div class="empresa-info-cont">
                 <h3>Housing</h3>
                 <div>
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="empresa">
-            <img class="empresa-img" src="./images/slider2.png" >
+            <img class="empresa-img" src="images/slider2.png" >
             <div class="empresa-info-cont">
                 <h3>Copia de seguridad en la nube</h3>
                 <div>
