--- a/Telefonia/views/layout/base.html
+++ b/Telefonia/views/layout/base.html
@@ -9,7 +9,7 @@
 
 
     <link rel="stylesheet" href="/css/styles.css"/>
-  
+    <link rel="stylesheet" href="/css/alarm.css"/>
     <link rel="stylesheet" href="/css/linea-movil.css"/>
     <link rel="stylesheet" href="/css/movilesymas.css"/>
     <link rel="stylesheet" href="/css/ayuda.css"/>
@@ -102,29 +102,29 @@
             <div>
                 <h4 class="uk-margin-top">Lo más buscado</h4>
                 <ul class="uk-list uk-list-bullet">
-                    <li><a href="/mi_trabaja">Preguntas frecuentes</a></li>
-                    <li><a href="/mi_info">Bucador de tiendas</a></li>
-                    <li><a href="/e_exito">Test de velocidad de internet</a></li>
-                    <li><a href="/mi_trabaja">Configurador de packs</a></li>
-                    <li><a href="/mi_trabaja">Área cliente</a></li>
+                    <li><a href="/preguntas">Preguntas frecuentes</a></li>
+                    <li><a href="/buscador-tiendas">Bucador de tiendas</a></li>
+                    <li><a href="/test-velocidad">Test de velocidad de internet</a></li>
+                    <li><a href="/packs">Configurador de packs</a></li>
+                    <li><a href="/area-cliente">Área cliente</a></li>
                 </ul>
             </div>
 
             <div>
                 <h4 class="uk-margin-top">Móviles y más</h4>
                 <ul class="uk-list uk-list-bullet">
-                    <li><a href="/e_pequenas">Apple</a></li>
-                    <li><a href="/packs">Samsung</a></li>
-                    <li><a href="/internet">Xiaomi</a></li>
-                    <li><a href="/s_todos">Objetos inteligentes</a></li>
+                    <li><a href="/moviles">Apple</a></li>
+                    <li><a href="/moviles">Samsung</a></li>
+                    <li><a href="/moviles">Xiaomi</a></li>
+                    <li><a href="/movilesymas">Objetos inteligentes</a></li>
                 </ul>
             </div>
             <div>
                 <h4 class="uk-margin-top">Autónomos y empresas</h4>
                 <ul class="uk-list uk-list-bullet">
-                    <li><a href="/e_pequenas">Casos de éxito</a></li>
-                    <li><a href="/packs">Pequeñas empresas</a></li>
-                    <li><a href="/internet">Grandes empresas</a></li>
+                    <li><a href="/empresas">Casos de éxito</a></li>
+                    <li><a href="/pequeñas-empresas">Pequeñas empresas</a></li>
+                    <li><a href="/grandes-empresas">Grandes empresas</a></li>
                 </ul>
             </div>
             <div>
