--- a/Telefonia/views/moviles.html
+++ b/Telefonia/views/moviles.html
@@ -63,49 +63,49 @@
         <input aria-label="Busca móviles..." placeholder="Busca móviles..." class="search-input" value="">
 
       <div class="mobile-card">
-        <img class="mobile-img" src="./images/10Tpro.png" >
+        <img class="mobile-img" src="images/10Tpro.png" >
         <h2>Xiaomi Max Pro</h2>
         <p class="mobile-price">300€</p>
       </div>
       <div class="mobile-card">
-        <img class="mobile-img" src="./images/10Tpro.png" >
+        <img class="mobile-img" src="images/10Tpro.png" >
         <h2>Xiaomi Max Pro</h2>
         <p class="mobile-price">300€</p>
       </div>
       <div class="mobile-card">
-        <img class="mobile-img" src="./images/10Tpro.png" >
+        <img class="mobile-img" src="images/10Tpro.png" >
         <h2>Xiaomi Max Pro</h2>
         <p class="mobile-price">300€</p>
       </div>
       
       <div class="mobile-card">
-        <img class="mobile-img" src="./images/10Tpro.png" >
+        <img class="mobile-img" src="images/10Tpro.png" >
         <h2>Xiaomi Max Pro</h2>
         <p class="mobile-price">300€</p>
       </div>
       <div class="mobile-card">
-        <img class="mobile-img" src="./images/10Tpro.png" >
+        <img class="mobile-img" src="images/10Tpro.png" >
         <h2>Xiaomi Max Pro</h2>
         <p class="mobile-price">300€</p>
       </div>
       <div class="mobile-card">
-        <img class="mobile-img" src="./images/10Tpro.png" >
+        <img class="mobile-img" src="images/10Tpro.png" >
         <h2>Xiaomi Max Pro</h2>
         <p class="mobile-price">300€</p>
       </div>
 
       <div class="mobile-card">
-        <img class="mobile-img" src="./images/10Tpro.png" >
+        <img class="mobile-img" src="images/10Tpro.png" >
         <h2>Xiaomi Max Pro</h2>
         <p class="mobile-price">300€</p>
       </div>
       <div class="mobile-card">
-        <img class="mobile-img" src="./images/10Tpro.png" >
+        <img class="mobile-img" src="images/10Tpro.png" >
         <h2>Xiaomi Max Pro</h2>
         <p class="mobile-price">300€</p>
       </div>
       <div class="mobile-card">
-        <img class="mobile-img" src="./images/10Tpro.png" >
+        <img class="mobile-img" src="images/10Tpro.png" >
         <h2>Xiaomi Max Pro</h2>
         <p class="mobile-price">300€</p>
       </div>
