--- a/Telefonia/views/objetos-inteligentes.html
+++ b/Telefonia/views/objetos-inteligentes.html
@@ -51,47 +51,47 @@
         <input aria-label="Buscar..." placeholder="Buscar..." class="search-input" value="">
 
       <div class="obj-card">
-        <img class="obj-img" src="./images/appleWatch.png" >
+        <img class="obj-img" src="images/appleWatch.png" >
         <h2>Smasung Galaxy Wacth</h2>
         <p class="mobile-price">300€</p>
       </div>
       <div class="obj-card">
-        <img class="obj-img" src="./images/appleWatch.png" >
+        <img class="obj-img" src="images/appleWatch.png" >
         <h2>Smasung Galaxy Wacth</h2>
         <p class="mobile-price">300€</p>
       </div>
       <div class="obj-card">
-        <img class="obj-img" src="./images/appleWatch.png" >
+        <img class="obj-img" src="images/appleWatch.png" >
         <h2>Smasung Galaxy Wacth</h2>
         <p class="mobile-price">300€</p>
       </div>
       <div class="obj-card">
-        <img class="obj-img" src="./images/appleWatch.png" >
+        <img class="obj-img" src="images/appleWatch.png" >
         <h2>Smasung Galaxy Wacth</h2>
         <p class="mobile-price">300€</p>
       </div>
       <div class="obj-card">
-        <img class="obj-img" src="./images/appleWatch.png" >
+        <img class="obj-img" src="images/appleWatch.png" >
         <h2>Smasung Galaxy Wacth</h2>
         <p class="mobile-price">300€</p>
       </div>
       <div class="obj-card">
-        <img class="obj-img" src="./images/appleWatch.png" >
+        <img class="obj-img" src="images/appleWatch.png" >
         <h2>Smasung Galaxy Wacth</h2>
         <p class="mobile-price">300€</p>
       </div>
       <div class="obj-card">
-        <img class="obj-img" src="./images/appleWatch.png" >
+        <img class="obj-img" src="images/appleWatch.png" >
         <h2>Smasung Galaxy Wacth</h2>
         <p class="mobile-price">300€</p>
       </div>
       <div class="obj-card">
-        <img class="obj-img" src="./images/appleWatch.png" >
+        <img class="obj-img" src="images/appleWatch.png" >
         <h2>Smasung Galaxy Wacth</h2>
         <p class="mobile-price">300€</p>
       </div>
       <div class="obj-card">
-        <img class="obj-img" src="./images/appleWatch.png" >
+        <img class="obj-img" src="images/appleWatch.png" >
         <h2>Smasung Galaxy Wacth</h2>
         <p class="mobile-price">300€</p>
       </div>
