--- a/Telefonia/views/packs.html
+++ b/Telefonia/views/packs.html
@@ -38,5 +38,5 @@
 
     <h2>Configuta tu pack a medida</h2>
     <p>Puede acceder a nuestro configurador de packs para personalizar un pack a medida que se ajuste a sus necesidades. </p>
-    <img  src="../../public/images/slider2.png" alt="">
+    <img  src="images/slider2.png" alt="">
 </div>
