--- a/Telefonia/views/pedidos.html
+++ b/Telefonia/views/pedidos.html
@@ -11,7 +11,7 @@
     <div class="pedidos-right-panel">
         <h2>Productos que has pedido</h2>
         <div class="pedido-card">
-            <img class="pedido-img" src="./images/10Tpro.png" >
+            <img class="pedido-img" src="images/10Tpro.png" >
             <h2>Xiaomi Max Pro</h2>
             <div class="info-pedido">
                 <p><strong>Precio:</strong> 200€</p>
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div class="pedido-card">
-            <img class="pedido-img" src="./images/10Tpro.png" >
+            <img class="pedido-img" src="images/10Tpro.png" >
             <h2>Xiaomi Max Pro</h2>
             <div class="info-pedido">
                 <p><strong>Precio:</strong> 200€</p>
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div class="pedido-card">
-            <img class="pedido-img" src="./images/10Tpro.png" >
+            <img class="pedido-img" src="images/10Tpro.png" >
             <h2>Xiaomi Max Pro</h2>
             <div class="info-pedido">
                 <p><strong>Precio:</strong> 200€</p>
@@ -44,7 +44,7 @@
             </div>
         </div>
         <div class="pedido-card">
-            <img class="pedido-img" src="./images/10Tpro.png" >
+            <img class="pedido-img" src="images/10Tpro.png" >
             <h2>Xiaomi Max Pro</h2>
             <div class="info-pedido">
                 <p><strong>Precio:</strong> 200€</p>
@@ -55,7 +55,7 @@
             </div>
         </div>
         <div class="pedido-card">
-            <img class="pedido-img" src="./images/10Tpro.png" >
+            <img class="pedido-img" src="images/10Tpro.png" >
             <h2>Xiaomi Max Pro</h2>
             <div class="info-pedido">
                 <p><strong>Precio:</strong> 200€</p>
@@ -66,7 +66,7 @@
             </div>
         </div>
         <div class="pedido-card">
-            <img class="pedido-img" src="./images/10Tpro.png" >
+            <img class="pedido-img" src="images/10Tpro.png" >
             <h2>Xiaomi Max Pro</h2>
             <div class="info-pedido">
                 <p><strong>Precio:</strong> 200€</p>
