--- a/Telefonia/views/preguntas.html
+++ b/Telefonia/views/preguntas.html
@@ -14,19 +14,19 @@
        <div class="preguntas-resultado">
             <div class="preguntas-seccion">
                 <a><h3>Mando a distacia</h3></a>
-                <a><img  src="./images/icons/flecha.png" width="30" alt=""></a>
+                <a><img  src="images/icons/flecha.png" width="30" alt=""></a>
             </div> 
             <div class="preguntas-seccion">
                 <a><h3>Consulta tu cobertura</h3></a>
-                <a><img  src="./images/icons/flecha.png" width="30" alt=""></a>
+                <a><img  src="images/icons/flecha.png" width="30" alt=""></a>
             </div> 
             <div class="preguntas-seccion">
                 <a><h3>Instalación</h3></a>
-                <a><img  src="./images/icons/flecha.png" width="30" alt=""></a>
+                <a><img  src="images/icons/flecha.png" width="30" alt=""></a>
             </div> 
             <div class="preguntas-seccion">
                 <a><h3>Garantía y devolución</h3></a>
-                <a><img  src="./images/icons/flecha.png" width="30" alt=""></a>
+                <a><img  src="images/icons/flecha.png" width="30" alt=""></a>
             </div> 
        </div>
        <h3>¿No encuentras lo que buscas? Accede al listado completo de <a>preguntas frecuentes</a></h3>
