--- a/Telefonia/views/test-velocidad.html
+++ b/Telefonia/views/test-velocidad.html
@@ -1,8 +1,8 @@
-<div class="alarm-content">
+<div class="velocidad-content">
     <h1>Test de velocidad</h1>
-    <div class="alarm-card">
-        <a href="/" class="internet-img"><img width="300" src="./images/internet.png" alt=""></a>
-        <div class="alarm-right-panel">
+    <div class="velocidad-card">
+        <a href="/" class="internet-img"><img width="300" src="/images/internet.png" alt=""></a>
+        <div class="velocidad-right-panel">
             <h2>Prueba tu conexión</h2>
             <div class="test-v-cont">
                 <p>El test de velocidad más fiable para comprobar tu <strong>conexión</strong> y <strong>velocidad</strong> de internet</p>
