--- a/Telefonia/public/css/test-velocidad.css
+++ b/Telefonia/public/css/test-velocidad.css
@@ -1,9 +1,19 @@
-.alarm-card{
+.velocidad-content{
+    display: grid;
+    justify-content: center;
+    margin: 10vh 0vh;
+}
+
+.velocidad-card{
     display: grid;
     grid-template-columns: 50% 50%;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     margin-top: 5vh;
-    width: 120vh !important;
+}
+.velocidad-right-panel{
+    display: grid;
+    justify-content: center;
+    padding: 2vh;
 }
 
 .test-v-cont{
