--- a/Telefonia/views/pequeñas-empresas.html
+++ b/Telefonia/views/pequeñas-empresas.html
@@ -1,11 +1,11 @@
-<div class="content">
+<div class="pequeñas-empresas-content">
     <h1>Pequeñas Empresas y Autónomos</h1>
     <h2>NUESTRAS <strong>TARIFAS</strong> DE <strong> LÍNEAS MÓVILES</strong></h2>
     <div class="tarifas-empresas">
       <div class="tarifa-empresa">
           <h3><strong>19,99 €/mes</strong></h3>
           <div class="info-tarifa-empresa">
-            <img  src="./images/header/linea-internet.png" alt="">
+            <img  src="images/header/linea-internet.png" alt="">
             <p> 10Gb de datos al mes y <strong>llamadas ilimitadas</strong></p>
           </div>
         <button class="button">Contratar</button>
@@ -13,7 +13,7 @@
       <div class="tarifa-empresa">
         <h3><strong>29,99 €/mes</strong></h3>
         <div class="info-tarifa-empresa">
-          <img  src="./images/header/linea-internet.png" alt="">
+          <img  src="images/header/linea-internet.png" alt="">
           <p> 200Gb de datos al mes y <strong>llamadas ilimitadas</strong></p>
         </div>
       <button class="button">Contratar</button>
@@ -21,7 +21,7 @@
     <div class="tarifa-empresa">
         <h3><strong>49,99 €/mes</strong></h3>
         <div class="info-tarifa-empresa">
-          <img  src="./images/header/linea-internet.png" alt="">
+          <img  src="images/header/linea-internet.png" alt="">
           <p><strong>Gb infinitos</strong> de datos al meás y <strong>llamadas ilimitadas</strong></p>
         </div>
       <button class="button">Contratar</button>
@@ -31,7 +31,7 @@
     </div>
     <div class="contacto-empresa-container">
         <div class="contacto-empresa">
-            <img  src="./images/header/linea-internet.png" alt="">
+            <img  src="images/header/linea-internet.png" alt="">
             <div class="info-contact-empresas">
                 <h3>Soy una empresa pequeña y necesito otra línea de móvil</h3>
                 <p>Sólo para pequñas empresas y autónomos ofrecemos tantas líneas extra cómo quieras. Cada una al 50% del precio original, para siempre.</p>
@@ -42,7 +42,7 @@
     <h2>Servicios para pequeñas empresas y autónomos</h2>
     <div class="pequeñas-empresas-container">
         <div class="empresa">
-            <img class="empresa-img" src="./images/slider1.png" >
+            <img class="empresa-img" src="images/slider1.png" >
             <div class="empresa-info-cont">
                 <h3>Housing</h3>
                 <div>
@@ -56,7 +56,7 @@
             </div>
         </div>
         <div class="empresa">
-            <img class="empresa-img" src="./images/slider2.png" >
+            <img class="empresa-img" src="images/slider2.png" >
             <div class="empresa-info-cont">
                 <h3>Copia de seguridad en la nube</h3>
                 <div>
