--- a/Telefonia/views/newlayout/base.html
+++ b/Telefonia/views/newlayout/base.html
@@ -50,8 +50,8 @@
 </header>
 
 
-<div class="content">
-    <h1>TV</h1>
+<div class="tv-content">
+    <h1>Línea Televisión</h1>
     <div class="oferta-tv">
         <div>
             <h2 class="tvh2">EL MEJOR CONTENIDO CON TV+</h2>
@@ -66,42 +66,58 @@
         <img  src="../../public/images/header/linea-internet.png" alt="">
         <h3>Si lo prefieres llama al 900 123 123 para contratarlo.</h3>
     </div>
-    <div class="tools-container">
-        <div class="tool">
-            <img class="tool-img" src="../../public/images/slider1.png" >
-            <div class="tool-info-cont">
-                <h2>Test de Velocidad Internet</h2>
-                <p>Analice la velocidad de su línea de internet y compárela con nuestras tarifas de internet.</p>
-                <button class="button">VER MÁS</button>
+    <div class="tv-container">
+        <div class="tv">
+            <img class="tv-img" src="../../public/images/slider1.png" >
+            <div class="tv-info-cont">
+                <h3>Canales incluidos</h3>
+                <div class="canales-incluidos">
+                    <p>FOX</p>
+                    <p>FOX</p>
+                    <p>FOX</p>
+                    <p>FOX</p>
+                    <p>FOX</p>
+                    <p>FOX</p>
+                    <p>FOX</p>
+                    <p>FOX</p>
+                    <p>FOX</p>
+                    <p>FOX</p>
+                    <p>FOX</p>
+                    <p>FOX</p>
+                </div>
             </div>
         </div>
     </div>
-    <div class="tv-card">
-        <img  src="../../public/images/slider2.png" alt="">
-        <div>
-            <h3>Canales incluidos</h3>
-            <div class="canales-incluidos">
-                <p>FOX</p>
-                <p>FOX</p>
-                <p>FOX</p>
-                <p>FOX</p>
-                <p>FOX</p>
-                <p>FOX</p>
-                <p>FOX</p>
-                <p>FOX</p>
-                <p>FOX</p>
-                <p>FOX</p>
-                <p>FOX</p>
-                <p>FOX</p>
-                <p>FOX</p>
-                <p>FOX</p>
-                <p>FOX</p>
-                <p>FOX</p>
-                <p>FOX</p>
-                <p>FOX</p>
-                <p>FOX</p>
-                <p>FOX</p>
-                <p>FOX</p>
+    <h2 class="tv-subs-h2">TAMBIÉN PUEDES <strong>AÑADIR SUBSCRIPCIONES A OTROS SERVICIOS</strong></h2>
+    <div class="tv-subs-container">
+        <div class="tv-subs">
+            <img class="tv-subs-img" src="../../public/images/slider1.png" >
+            <div class="tv-subs-info-cont">
+                <h2>Añade otros packs básicos adicionales</h2>
+                <div>
+                    <p>Te explicamos todo sobre el roaming para que no te quede ninguna duda, recuerda que aunque viajes a Europa tendrás que seguir estos pasos:</p>
+                    <ul>
+                        <li>Activa el roaming en tu SIM</li>
+                        <li>Activa la itinerancia de datos</li>
+                    </ul>
+                </div>
+                <button class="button">CONFIGURAR ROAMING</button>
+            </div>
+        </div>
+        <div class="tv-subs">
+            <img class="tv-subs-img" src="../../public/images/slider1.png" >
+            <div class="tv-subs-info-cont">
+                <h2>Contacto</h2>
+                <p>Póngase en contacto con nosotros si no encuentra lo que busca o tiene alguna duda</p>
+                <button class="button">VER DATOS DE CONTACTO</button>
+            </div>
+        </div>
+        <div class="tv-subs">
+            <img class="tv-subs-img" src="../../public/images/slider1.png" >
+            <div class="tv-subs-info-cont">
+                <h2>Contacto</h2>
+                <p>Póngase en contacto con nosotros si no encuentra lo que busca o tiene alguna duda</p>
+                <button class="button">VER DATOS DE CONTACTO</button>
             </div>
         </div>
     </div>
