--- a/Telefonia/public/css/tv.css
+++ b/Telefonia/public/css/tv.css
@@ -1,24 +1,18 @@
-.content{
+.tv-content{
     display: grid;
-    grid-template-rows: 3% 10% 4% ;
+    grid-template-rows: 5% 10% 4% 25% auto;
     margin: 10vh 0px ; 
     height: 220vh;
-    justify-content: center;
 }
 
-.content h1{
+.tv-content h1{
     text-align: center;
 }
 
-.tvh2{
-    font-size: 1.5em;
-    color: white;
-}
 
-.tvh2-price{
-    color: white;
+.tv-subs-h2{
+    justify-self: center;
 }
-
 .oferta-tv{
     display: grid;
     grid-template-columns: 90% 10%;
@@ -56,7 +50,52 @@
     grid-template-columns: 50% 50%;
 }
 
-.tools-container{
+.tv-container{
+    display: grid;
+    grid-template-rows: auto auto auto;
+    grid-template-columns: 90%;
+    justify-content: center;
+    width: 150vh;
+    gap: 5vh;
+    justify-self: center;
+}
+
+.tv{
+    display: grid;
+    grid-template-columns: 60% 40%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    margin-top: 4vh;
+}
+
+.tv-img{
+    height: 100%;
+}
+
+.tv-info-cont{
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    grid-template-rows: 10% auto;
+    padding: 5vh 0vh;
+}
+
+
+
+.canales-incluidos{
+    display: grid;
+    grid-template-columns:  auto auto auto;
+    justify-content: center;
+    align-items: center;
+}
+
+.canales-incluidos p{
+  min-width: 15vh;
+  text-align: start;
+}
+
+
+.tv-subs-container{
+    justify-self: center;
     display: grid;
     grid-template-rows: auto auto auto;
     grid-template-columns: 90%;
@@ -65,23 +104,23 @@
     gap: 5vh;
 }
 
-.tool{
+.tv-subs{
     display: grid;
-    grid-template-columns: 30% 70%;
-
+    grid-template-columns: 40% 60%;
     height: 30vh;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
 
-.tool-img{
-    height: 210px;
-    width: 1000px;
+.tv-subs-img{
+    height: 100%;
 }
 
-.tool-info-cont{
+.tv-subs-info-cont{
     display: grid;
     justify-content: center;
     align-items: center;
-    grid-template-rows: 10% 50% 30%;
-    padding: 20px;
+    grid-template-rows: 15% 50% 30%;
+    padding-top: 4vh;
+    padding-left: 4vh;
+    padding-right: 4vh;
 }
