--- a/Telefonia/views/newlayout/base.html
+++ b/Telefonia/views/newlayout/base.html
@@ -103,24 +103,41 @@
                 </div>
                 <button class="button">CONFIGURAR ROAMING</button>
             </div>
-        </div>
-        <div class="tv-subs">
-            <img class="tv-subs-img" src="../../public/images/slider1.png" >
-            <div class="tv-subs-info-cont">
-                <h2>Contacto</h2>
-                <p>Póngase en contacto con nosotros si no encuentra lo que busca o tiene alguna duda</p>
-                <button class="button">VER DATOS DE CONTACTO</button>
-            </div>
-        </div>
-        <div class="tv-subs">
-            <img class="tv-subs-img" src="../../public/images/slider1.png" >
-            <div class="tv-subs-info-cont">
-                <h2>Contacto</h2>
-                <p>Póngase en contacto con nosotros si no encuentra lo que busca o tiene alguna duda</p>
-                <button class="button">VER DATOS DE CONTACTO</button>
-            </div>
-        </div>
+        </div>  
     </div>
+    <div class="tv-subs-container">
+        <div class="tv-subs">
+            <img class="tv-subs-img" src="../../public/images/slider1.png" >
+            <div class="tv-subs-info-cont">
+                <h2>Añade suscripciones a servicios de Streaming</h2>
+                <div>
+                    <p>Te explicamos todo sobre el roaming para que no te quede ninguna duda, recuerda que aunque viajes a Europa tendrás que seguir estos pasos:</p>
+                    <ul>
+                        <li>Activa el roaming en tu SIM</li>
+                        <li>Activa la itinerancia de datos</li>
+                    </ul>
+                </div>
+                <button class="button">CONFIGURAR ROAMING</button>
+            </div>
+        </div>  
+    </div>
+    <div class="tv-subs-container">
+        <div class="tv-subs">
+            <img class="tv-subs-img" src="../../public/images/slider1.png" >
+            <div class="tv-subs-info-cont">
+                <h2>Adquiere decodificadores adicionales</h2>
+                <div>
+                    <p>Te explicamos todo sobre el roaming para que no te quede ninguna duda, recuerda que aunque viajes a Europa tendrás que seguir estos pasos:</p>
+                    <ul>
+                        <li>Activa el roaming en tu SIM</li>
+                        <li>Activa la itinerancia de datos</li>
+                    </ul>
+                </div>
+                <button class="button">CONFIGURAR ROAMING</button>
+            </div>
+        </div>  
+    </div>
+    
 </div>
 
 <!--FOOTER-->
