--- a/Telefonia/views/layout/base.html
+++ b/Telefonia/views/layout/base.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="/css/test-velocidad.css"/>
     <link rel="stylesheet" href="/css/tv.css"/> 
     <link rel="stylesheet" href="/css/tools.css"/> 
+    <link rel="stylesheet" href="/css/buscador.css"/> 
 
     <script src="/js/jquery.min.js"></script>
     <script src="/js/uikit.js"></script>
