--- a/Telefonia/views/newlayout/base.html
+++ b/Telefonia/views/newlayout/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="../../public/css/uikit.css"/>
     <link rel="stylesheet" href="../../public/css/styles.css"/>
-    <link rel="stylesheet" href="../../public/css/tv.css"/>
+    <link rel="stylesheet" href="../../public/css/buscador.css"/>
     <script src="../../public/js/jquery.min.js"></script>
     <script src="../../public/js/uikit.js"></script>
     <script src="../../public/js/uikit-icons.js"></script>
@@ -50,94 +50,90 @@
 </header>
 
 
-<div class="tv-content">
-    <h1>Línea Televisión</h1>
-    <div class="oferta-tv">
-        <div>
-            <h2 class="tvh2">EL MEJOR CONTENIDO CON TV+</h2>
-            <p>Incluye un <strong> decodificador 4k</strong>, posibilidad de <strong>grabar programas, 19 canales de televisón</strong>(más canales tdt) y un pack básico</p>
+<div class="buscador-content">
+    <h1>Buscador de Tiendas</h1>
+    <h2>Busca la tienda más cercana por tu ubicación actual:</h2>
+    <button class="button-buscar">BUSCAR TIENDAS MÁS CERCANAS</button>
+    <h2>O utiliza nuestro buscador de tiendas:</h2>
+    <div class="bucador-container">
+        <select class="buscar-select" name="cars" id="cars">
+            <option value="volvo">Volvo</option>
+            <option value="saab">Saab</option>
+            <option value="mercedes">Mercedes</option>
+            <option value="audi">Audi</option>
+        </select>
+        <select class="buscar-select" name="cars" id="cars">
+            <option value="volvo">Volvo</option>
+            <option value="saab">Saab</option>
+            <option value="mercedes">Mercedes</option>
+            <option value="audi">Audi</option>
+        </select>
+        <select class="buscar-select" name="cars" id="cars">
+            <option value="volvo">Volvo</option>
+            <option value="saab">Saab</option>
+            <option value="mercedes">Mercedes</option>
+            <option value="audi">Audi</option>
+        </select>
+        <div class="resultados-busqueda">
+            <h2>Resultado de tu búsqueda:</h2>
+            <div class="resultado-busqueda borde-resultado">
+                <div class="resultados-busqueda-sub">
+                    <div class="resultados-busqueda-sub2">
+                        <h3>Dirección</h3>
+                        <p>Calle Verona Fort n16 Gigón,Asturias</p>
+                    </div>
+                    <div class="resultados-busqueda-sub2">
+                        <h3>Email</h3>
+                        <p>austefaandjohn@telefonico.com</p>
+                    </div>
+                    <div class="resultados-busqueda-sub2">
+                        <h3>Teléfono</h3>
+                        <p>123456789</p>
+                    </div>
+                </div>
+                <div class="resultados-busqueda-sub">
+                    <h3>Horario</h3>
+                    <p>Lunes: 10:00-14:00 y 17:00-20:00</p>
+                    <p>Martes: 10:00-14:00 y 17:00-20:00</p>
+                    <p>Miércoles: 10:00-14:00 y 17:00-20:00</p>
+                    <p>Jueves: 10:00-14:00 y 17:00-20:00</p>
+                    <p>Viernes: 10:00-14:00 y 17:00-20:00</p>
+                    <p>Sábados: Cerrado</p>
+                    <p>Domingos: Cerrado</p>
+                </div>
+                <button class="button-buscar button-realizar-pedido">REALIZAR PEDIDO</button>
+            </div>
+            <div class="resultado-busqueda ">
+                <div class="resultados-busqueda-sub">
+                    <div class="resultados-busqueda-sub2">
+                        <h3>Dirección</h3>
+                        <p>Calle Inventada Fort n16 Oviedo,Asturias</p>
+                    </div>
+                    <div class="resultados-busqueda-sub2">
+                        <h3>Email</h3>
+                        <p>inventflix@telefonico.com</p>
+                    </div>
+                    <div class="resultados-busqueda-sub2">
+                        <h3>Teléfono</h3>
+                        <p>123456789</p>
+                    </div>
+                </div>
+                <div class="resultados-busqueda-sub">
+                    <h3>Horario</h3>
+                    <p>Lunes: 10:00-14:00 y 17:00-20:00</p>
+                    <p>Martes: 10:00-14:00 y 17:00-20:00</p>
+                    <p>Miércoles: 10:00-14:00 y 17:00-20:00</p>
+                    <p>Jueves: 10:00-14:00 y 17:00-20:00</p>
+                    <p>Viernes: 10:00-14:00 y 17:00-20:00</p>
+                    <p>Sábados: Cerrado</p>
+                    <p>Domingos: Cerrado</p>
+                </div>
+                <button class="button-buscar button-realizar-pedido">REALIZAR PEDIDO</button>
+            </div>
+
         </div>
-        <div>
-            <h2 class="tvh2-price">5,99 €/mes</h2>
-            <button class="button">CONTRATAR</button>
-        </div>
     </div>
-    <div class="tv-llama">
-        <img  src="../../public/images/header/linea-internet.png" alt="">
-        <h3>Si lo prefieres llama al 900 123 123 para contratarlo.</h3>
-    </div>
-    <div class="tv-container">
-        <div class="tv">
-            <img class="tv-img" src="../../public/images/slider1.png" >
-            <div class="tv-info-cont">
-                <h3>Canales incluidos</h3>
-                <div class="canales-incluidos">
-                    <p>FOX</p>
-                    <p>FOX</p>
-                    <p>FOX</p>
-                    <p>FOX</p>
-                    <p>FOX</p>
-                    <p>FOX</p>
-                    <p>FOX</p>
-                    <p>FOX</p>
-                    <p>FOX</p>
-                    <p>FOX</p>
-                    <p>FOX</p>
-                    <p>FOX</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <h2 class="tv-subs-h2">TAMBIÉN PUEDES <strong>AÑADIR SUBSCRIPCIONES A OTROS SERVICIOS</strong></h2>
-    <div class="tv-subs-container">
-        <div class="tv-subs">
-            <img class="tv-subs-img" src="../../public/images/slider1.png" >
-            <div class="tv-subs-info-cont">
-                <h2>Añade otros packs básicos adicionales</h2>
-                <div>
-                    <p>Te explicamos todo sobre el roaming para que no te quede ninguna duda, recuerda que aunque viajes a Europa tendrás que seguir estos pasos:</p>
-                    <ul>
-                        <li>Activa el roaming en tu SIM</li>
-                        <li>Activa la itinerancia de datos</li>
-                    </ul>
-                </div>
-                <button class="button">CONFIGURAR ROAMING</button>
-            </div>
-        </div>  
-    </div>
-    <div class="tv-subs-container">
-        <div class="tv-subs">
-            <img class="tv-subs-img" src="../../public/images/slider1.png" >
-            <div class="tv-subs-info-cont">
-                <h2>Añade suscripciones a servicios de Streaming</h2>
-                <div>
-                    <p>Te explicamos todo sobre el roaming para que no te quede ninguna duda, recuerda que aunque viajes a Europa tendrás que seguir estos pasos:</p>
-                    <ul>
-                        <li>Activa el roaming en tu SIM</li>
-                        <li>Activa la itinerancia de datos</li>
-                    </ul>
-                </div>
-                <button class="button">CONFIGURAR ROAMING</button>
-            </div>
-        </div>  
-    </div>
-    <div class="tv-subs-container">
-        <div class="tv-subs">
-            <img class="tv-subs-img" src="../../public/images/slider1.png" >
-            <div class="tv-subs-info-cont">
-                <h2>Adquiere decodificadores adicionales</h2>
-                <div>
-                    <p>Te explicamos todo sobre el roaming para que no te quede ninguna duda, recuerda que aunque viajes a Europa tendrás que seguir estos pasos:</p>
-                    <ul>
-                        <li>Activa el roaming en tu SIM</li>
-                        <li>Activa la itinerancia de datos</li>
-                    </ul>
-                </div>
-                <button class="button">CONFIGURAR ROAMING</button>
-            </div>
-        </div>  
-    </div>
-    
+   
 </div>
 
 <!--FOOTER-->
